Shimon Khomenker   1. changed localStorage to $sessionStorage   2. wrapped code to a function   3. added existing error messages   4. fixed code if/else   5. deleted "ng-controller" from html   6. fixed mouse event on the image   7. fixed css class names in accordance with the naming convention

--- a/si-webapp/src/client/src/styles/userProfilePage.css
+++ b/si-webapp/src/client/src/styles/userProfilePage.css
@@ -13,16 +13,18 @@
 .toppad
 {margin-top:20px;
     margin-left: -20px;
-
 }
-.tooltip.customClass .tooltip-inner {
+.tooltip.custom-class .tooltip-inner {
     color: #880000;
     background-color: #D9EDF7;
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
-.tooltip.customClass .tooltip-arrow {
+.tooltip.custom-class .tooltip-arrow {
     display: none;
 }
-.buttonSizeFont{
+.button-size-font{
     font-size: 12px
+}
+img:hover{
+    cursor: pointer
 }
